# bc_thesis

./: .gitignore  README  README~
demo/: main-test.cpp
demo/lvis/: CMakeLists.txt
demo/lvis/include/: camera.hpp  pathVertex.hpp
demo/lvis/src/: lvis.cpp  sphereSelect.cpp
demo_includes_libs/: CMakeLists.txt  main-test.cpp
demo_includes_libs/includeAll/X11/fonts/: fontconf.h
demo_includes_libs/includeAll/eigen2/Eigen/: Core
demo_includes_libs/lvis/: CMakeLists.txt
demo_includes_libs/lvis/include/: common.hpp  lightPath.hpp  lvis.hpp  mesh.h  sphereSelect.hpp  virtCam.hpp
demo_includes_libs/lvis/src/: camera.cpp  lvis.cpp  pathVertex.cpp  sceneLoader.cpp  virtCam.cpp
latex/: 01intro.tex  02visualisation.tex  05results.tex  06conclusion.tex  main.aux  main.bbl  main.blg  main.dvi  main.lof  main.tex  main.toc  research.bib
lvis/include/: meshData.h  sceneLoader.h
lvis/src/: lightPath.cpp  mesh.cpp
models_and_shaders/shaders/: fragment.frag  fragment_textonly.frag
